[package]
name = "hush-proxy"
version = "0.1.0"
edition = "2021"
description = "A fast, lightweight PII redaction proxy for LLM APIs"
license = "MIT"
repository = "https://github.com/chandika/hush-proxy"
keywords = ["pii", "privacy", "llm", "proxy", "redaction"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
